--- a/nba-backend/package.json
+++ b/nba-backend/package.json
@@ -15,5 +15,6 @@
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.2"
-  }
+  },
+  "homepage": "https://nitinvunnam.github.io/LeSixDegrees"
 }
